update paging for recipe service
