# src/api/v1/routes/recipe/index.js
@@ -6,6 +6,7 @@ const router = express.Router()
 
 // Get all recipes
 router.get('/recipes/vn', RecipeController.getAllRecipes)
+router.get('/recipes/vn/paging', RecipeController.getRecipesPaging)
 
 
 module.exports = router
